Página CONTATOS pronta

--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,16 @@ ESTRUTURA BASE
 
 /***** PÁGINA INICIAL*/
 
+
+/***** PÁGINA CONTATOS*/
+
+.contato_endereco{
+    color: white;
+    padding-top: 20px;
+    
+   
+}
+
 /***** EXTRAS*/
 
 /***** @MEDIA*/
