--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,7 @@ ESTRUTURA BASE
 .titulos{
     color: rgb(0, 0, 0);
     padding-bottom: 10px;
+    font-weight: 900;
     
 }
 
@@ -63,6 +64,7 @@ ESTRUTURA BASE
     padding-top: 150px;
     padding-left: 30px;
     padding-right: 30px;
+    font-weight: 900;
     
 }
 
@@ -141,7 +143,18 @@ ESTRUTURA BASE
 }
 
 
-
+.btn.btn-danger.btContatos1{
+    padding-inline: 103px;
+    
+}
+.btn.btn-danger.btContatos2{
+    padding-inline: 100px;
+    
+}
+.btn.btn-danger.btContatos3{
+    padding-inline: 110px;
+    
+}
 
 
 /***** FOOTER*/
